--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "my_react_demo",
+  "name": "metedesign",
   "version": "1.0.0",
-  "description": "test",
+  "description": "METE DESIGN",
   "main": "webpack.config.js",
   "scripts": {
-    "build": "webpack",
+    "build": "standard && webpack",
     "dev": "webpack-dev-server --progress --colors",
-    "deploy": "set NODE_ENV=production&&webpack -p --progress --colors"
+    "deploy": "standard && set NODE_ENV=production && webpack -p --progress --colors"
   },
-  "author": "lsq",
+  "author": "SuperMap",
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.5.2",
@@ -21,24 +21,47 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.26.0",
     "node-sass": "^3.9.1",
-    "react": "^15.3.1",
     "react-highcharts": "^11.0.0",
+    "react-hot-loader": "^3.0.0-beta.4",
     "sass-loader": "^4.0.2",
+    "standard": "^8.6.0",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "extract-text-webpack-plugin": "^1.0.1",
+    "classnames": "^2.2.5",
     "leaflet": "^1.0.2",
+    "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-hot-loader": "^3.0.0-beta.4",
     "react-leaflet": "^1.0.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "redux": "^3.6.0"
+  },
+  "directories": {
+    "example": "example"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ghost60/MeteDesign.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ghost60/MeteDesign/issues"
+  },
+  "homepage": "https://github.com/ghost60/MeteDesign#readme",
+  "standard": {
+    "ignore": [
+      "/example/",
+      "/node_modules/",
+      "webpack.config.js",
+      "/build/",
+      "/dist/"
+    ]
   }
 }
