--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "leaflet": "^1.0.2",
+    "rc-dialog": "^6.5.6",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-leaflet": "^1.0.1",
